--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram ft. Bootstrap</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    <link 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+        rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+        crossorigin="anonymous">
+    <link 
+        rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" 
+        ferrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -20,7 +26,7 @@
                 <i class="fa-brands fa-instagram fs-2 "></i>
                 <h1 class="fs-5 ms-1">Instagram</h1>
             </div>
-            <div class="iconos d-inline-flex p-2">
+            <div class="createNewPostButton d-inline-flex p-2">
                 <div class="new_post">
                     <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         Create a new post
@@ -60,7 +66,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="ajustes ms-1">
+                <div class="menuAjustes ms-1">
                     <div class="btn-group">
                         <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
                             aria-expanded="false">
@@ -76,7 +82,8 @@
                 </div>
             </div>
         </div>
-        <div class="body">
+        <!--Botones para elegir ver los posts en 3x3 o en columna-->
+        <div class="navButtons">
             <div class="dropdowns d-flex justify-content-center align-items-center w-100">
                 <div class="d-flex">
                     <div class="p-2">
@@ -86,18 +93,17 @@
                         </button>
                     </div>
                     <div class="p-2">
-                        <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#otherContent"
-                            aria-expanded="false" aria-controls="otherContent">
+                        <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#columnView"
+                            aria-expanded="false" aria-controls="columnView">
                             <i class="fa-solid fa-square"></i>
                         </button>
                     </div>
-
                 </div>
             </div>
         </div>
-
-        <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
+        <!--Pantalla de ig-posts 3x3-->
+        <div class="posts" id="accordionExample">
+            <div class="gridViewPost">
                 <div id="gridView" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                     <div class="row">
                         <div class="col-md-4 mb-4">
@@ -147,8 +153,9 @@
                     </div>
                 </div>
             </div>
-            <div class="accordion-item">
-                <div id="otherContent" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <!--Vista de los ig-post en columna-->
+            <div class="columnViewPost">
+                <div id="columnView" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="container mt-4">
                         <div class="d-flex flex-column align-items-center">
 
@@ -217,15 +224,17 @@
                         </div>
                     </div>
                 </div>
-
-
             </div>
-            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-                integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-                crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-                integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-                crossorigin="anonymous"></script>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
